@@ -1,18 +1,16 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
 use 5.006;
 
-use ExtUtils::MakeMaker;
+use ExtUtils::MakeMaker 7.1101;
 
 my %WriteMakefileArgs = (
   "ABSTRACT" => "Read an INI file and expand bundles as you go.",
   "AUTHOR" => "Kent Fredric <kentnl\@cpan.org>",
   "CONFIGURE_REQUIRES" => {
-    "CPAN::Meta::Requirements" => "2.120620",
-    "ExtUtils::MakeMaker" => 0,
-    "Module::Metadata" => 0
+    "ExtUtils::MakeMaker" => "7.1101"
   },
   "DISTNAME" => "Dist-Zilla-Util-ExpandINI",
   "LICENSE" => "perl",
@@ -36,7 +34,7 @@ my %WriteMakefileArgs = (
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::Differences" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "0.003003",
   "test" => {
@@ -58,14 +56,11 @@ my %FallbackPrereqs = (
   "Moo" => "1.000008",
   "Scalar::Util" => 0,
   "Test::Differences" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "parent" => 0,
   "strict" => 0,
   "warnings" => 0
 );
-
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.016
-requires('Mixin::Linewise', '0.108') if has_module('Mixin::Linewise', '0.107');
 
 
 unless ( eval { ExtUtils::MakeMaker->VERSION(6.63_03) } ) {
@@ -78,29 +73,3 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
   unless eval { ExtUtils::MakeMaker->VERSION(6.52) };
 
 WriteMakefile(%WriteMakefileArgs);
-
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.016
-sub has_module {
-  my ($module, $version_or_range) = @_;
-  require Module::Metadata;
-  my $mmd = Module::Metadata->new_from_module($module);
-  return undef if not $mmd;
-  return $mmd->version($module) if not defined $version_or_range;
-
-  require CPAN::Meta::Requirements;
-  my $req = CPAN::Meta::Requirements->new;
-  $req->add_string_requirement($module => $version_or_range);
-  return 1 if $req->accepts_module($module => $mmd->version($module));
-  return 0;
-}
-
-sub requires {
-  goto &runtime_requires;
-}
-
-sub runtime_requires {
-  my ($module, $version_or_range) = @_;
-  $version_or_range = '0' if not $version_or_range;
-  $WriteMakefileArgs{PREREQ_PM}{$module} = $FallbackPrereqs{$module} = $version_or_range;
-  return;
-}
