@@ -17,13 +17,9 @@ toolkit_hardness  = soft
 twitter_extra_hash_tags = #distzilla
 bumpversions      = 1
 srcreadme         = mkdn
+MakeMaker.eumm_version = 7.1101
 ; auto_prereqs_skip = File::Find
-
 
 [Prereqs]
 ; authordep Pod::Elemental::Transformer::List
 Mixin::Linewise = != 0.107  ; not understood except on very new EUMM
-
-[DynamicPrereqs]
-:version = 0.016
--raw = requires('Mixin::Linewise', '0.108') if has_module('Mixin::Linewise', '0.107');
