@@ -1,6 +1,30 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.003003
+ [Added / develop requires]
+ - Test::MinimumVersion
+
+ [Changed / configure requires]
+ - ExtUtils::MakeMaker 0 → 7.1101
+
+ [Changed / develop requires]
+ - Dist::Zilla::Plugin::Test::Compile::PerFile 0 → 0.003902
+
+ [Changed / develop suggests]
+ - Dist::Zilla::PluginBundle::Author::KENTNL 2.025002 → 2.025021
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
+
+ [Removed / configure recommends]
+ - ExtUtils::MakeMaker 7.00
+
+ [Removed / configure requires]
+ - CPAN::Meta::Requirements 2.120620
+ - Module::Metadata
+
+ [Removed / develop requires]
+ - Dist::Zilla::Plugin::DynamicPrereqs 0.016
 
 0.003002 2015-10-19T10:20:25Z
  [Added / configure requires]
