@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.003003
+ [Removed / configure recommends]
+ - ExtUtils::MakeMaker 7.00
 
 0.003002 2015-10-19T10:20:25Z
 
